--- a/form-login-5/src/main/resources/application.properties
+++ b/form-login-5/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.security.user.name=javaboy
 spring.security.user.password=123
 
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=yamalaka
 spring.datasource.url=jdbc:mysql:///security?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
