login - 6 - SpringDataJpa持久化用户数据

--- a/withjpa/src/main/resources/application.properties
+++ b/withjpa/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=yamalaka
 spring.datasource.url= jdbc:mysql:///withjpa?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 
 spring.jpa.database=mysql
